--- a/config.toml
+++ b/config.toml
@@ -6,8 +6,8 @@ themesDir = "themes"
 title = "Neil Thomas"
 theme = "not-much"
 languageCode = "en-us"
-baseURL = "https://example.org/"
-copyright = "Sample custom notice © {year}"
+baseURL = "https://www.neiltthomas.com/"
+copyright = "© {year} Neil Thomas"
 
 [markup]
   [markup.highlight]
@@ -28,7 +28,7 @@ showThemeNotice = false
   description = "Personal website of Neil Thomas, Electrical Engineering and Computer Science student at UC Berkeley"
   keywords = ["Neil Thomas", "UC Berkeley", "EECS", "Electrical Engineering", "Computer Science"]
   author = "Neil Thomas"
-  twitter = "@yourtwitterhandle"  # Add your Twitter handle if you have one
+  twitter = "@neiltthomas"  # Update with your actual Twitter handle
   og_image = "/images/og-image.jpg"  # Add an Open Graph image for social sharing
 
 # Enable robots.txt
